@@ -119,8 +119,8 @@ Example:
 
     def should_generate_classification_page(self, classification, post_list, lang):
         """Only generates list of posts for classification if this function returns True."""
-        return not self.site.config["DISABLE_INDEXES_PLUGIN_INDEX_AND_ATOM_FEED"]
+        return not self.site.config["DISABLE_INDEXES"]
 
     def should_generate_rss_for_classification_page(self, classification, post_list, lang):
         """Only generates RSS feed for list of posts for classification if this function returns True."""
-        return not self.site.config["DISABLE_INDEXES_PLUGIN_RSS_FEED"]
+        return not self.site.config["DISABLE_MAIN_RSS_FEED"]
